fixed remote caret position for long words (with word-wrapping)

--- a/src/main/webapp/resources/css/doc.css
+++ b/src/main/webapp/resources/css/doc.css
@@ -38,7 +38,7 @@
 	outline: 0;
 /*	border: 1px solid;*/
 	overflow: hidden;
-    word-break: break-all;
+    word-wrap: break-word;
     padding: 5px;
 	-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
